<resources>
    <string name="app_name">WeShare</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="map_api_key_name">com.google.android.geo.API_KEY</string>
    <string name="server_client_id">887671659324-uufihsiithrl3s0ogno5st2kikqb38mg.apps.googleusercontent.com</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home">首頁</string>
    <string name="map">周邊熱點</string>
    <string name="message">聊天</string>
    <string name="profile">個人</string>
    <string name="post_event">刊登活動</string>
    <string name="post_gift">刊登贈品</string>
    <string name="choose_location">請選擇地點</string>
    <string name="gift_management">贈品管理</string>
    <string name="event_management">活動管理</string>
    <string name="notification">通知</string>
    <string name="login">登入</string>
    <string name="edit_profile">會員資料更新</string>
    <string name="gift_browse">贈品查詢</string>
    <string name="event_browse">活動查詢</string>
    <string name="event_check_in">活動簽到掃描</string>
    <string name="hero_rank">活動查詢</string>


    // home newbie hints
    <string name="hint_welcome_msg">歡迎進入WeShare，恭喜您已成功地完成共享的第一步！</string>
    <string name="hint_welcome_msg_sub">讓我為您做個操作介紹吧:)</string>
    <string name="hint_next_btn_text">下一步</string>
    <string name="hint_close_btn_text">關閉</string>
    <string name="hint_post_button">點擊+按鈕可以刊登贈品或刊登活動</string>
    <string name="hint_browse_button">點擊查看活動與查看贈品可以瀏覽當前最新的刊登項目</string>
    <string name="hint_hero_chart">點擊英雄榜可以查看到用戶的貢獻排名</string>
    <string name="hint_notification_button">點擊小鈴鐺可以看到最新的通知訊息</string>
    <string name="hint_profile">您可以在個人頁面中找到並管理您刊登過的贈品與活動</string>
    <string name="hint_goodbye_title">再次歡迎您的加入，馬上開始和大家們共享交流物資吧！ :)</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_fail">Result Fail</string>

    <string-array name="gift_item_condition">
        <item>全新</item>
        <item>二手</item>
    </string-array>

    <string-array name="gift_item_sort">
        <item>食品</item>
        <item>生活用品</item>
        <item>服飾用品</item>
        <item>電子器材</item>
        <item>醫療用品</item>
        <item>寵物用品</item>
        <item>娛樂器材</item>
        <item>其他</item>
    </string-array>

    <string-array name="event_type_sort">
        <item>社區服務</item>
        <item>募款拍賣</item>
        <item>環境保護</item>
        <item>動物保護</item>
        <item>知識傳播</item>
        <item>公共福利</item>
        <item>社會援助</item>
        <item>文化藝術活動</item>
        <item>國際合作</item>
        <item>其他</item>
    </string-array>

    <string-array name="violation_sort">
        <item>暴力或令人厭惡的內容</item>
        <item>色情內容</item>
        <item>仇恨或惡意內容</item>
        <item>有害的危險行為</item>
        <item>虐待兒童</item>
        <item>宣傳恐怖主義</item>
        <item>垃圾內容或誤導性內容</item>
        <item>權利侵犯</item>
        <item>詐騙/詐欺</item>
        <item>其他</item>
    </string-array>

    <string name="posted_time">%s 刊登</string>
    <string name="gift_post_sort">物品分類: %1$s</string>
    <string name="event_post_sort">活動分類: %1$s</string>
    <string name="gift_registrants_number">已有%1$d人登記索取</string>
    <string name="number_who_liked">%1$d 人說讚</string>
    <string name="event＿comments">留言</string>
    <string name="request_leave_intro_message">留個自我介紹給大家吧！</string>
    <string name="request_gift">登記索取</string>
    <string name="already_requested_gift">您已經登記索取</string>
    <string name="filter_all">全部</string>
    <string name="filter_ongoing">開放中</string>
    <string name="filter_ended">已結案</string>
    <string name="filter_abandoned">已下架</string>
    <string name="event_leave_a_comment">留個言吧…</string>
    <string name="chatroom_send_a_message">輸入訊息</string>
    <string name="event_start">活動開始</string>
    <string name="event_end">活動即結束</string>



    //贈品下架Alert窗
    <string name="abandoned_title">您確定要下架\u0022%s\u0022嗎?</string>
    <string name="abandoned_message">下架後將無法復原或操作派發!</string>
    <string name="abandoned_yes">確認下架</string>
    <string name="abandoned_no">取消下架</string>
    <string name="give_away_gift">派發</string>

    //活動強制結束Alert窗
    <string name="force_end_title">您確定要強制結束\u0022%s\u0022嗎?</string>
    <string name="force_end_message">操作將無法復原!</string>
    <string name="force_end_yes">確認結束</string>
    <string name="force_end_no">取消</string>

    //送禮物Alert窗
    <string name="send_gift_title">您確定要送出\u0022%1s\u0022給用戶 %2$1s 嗎?</string>
    <string name="send_gift_message">確認送出後將不可再作修改!</string>
    <string name="requested_comments">索取人留言</string>

    //封鎖檢舉用戶
    <string name="title_report_user">檢舉用戶</string>
    <string name="title_agree_policy">同意</string>
    <string name="title_disagree_policy">不同意</string>
    <string name="block_this_person_title">確定要封鎖用戶：%s？</string>
    <string name="block_this_person_message">封鎖後您將永遠看不到關於此用戶的任何評論與刊登。</string>
    <string name="block_this_person_complete">已封鎖用戶</string>

    //Log Messages
    <string name="log_msg_post_gift">&lt;b>%1s&lt;/b> 刊登了贈品：%2s</string>
    <string name="log_msg_post_event">&lt;b>%1s&lt;/b> 刊登了活動：%2s</string>
    <string name="log_msg_request_gift">&lt;b>%1s&lt;/b> 登記了贈品索取：%2s</string>
    <string name="log_msg_send_away_gift">&lt;b>%1s&lt;/b> 送出了贈品：%2s給%3s</string>
    <string name="log_msg_abandon_gift">&lt;b>%1s&lt;/b> 下架了贈品：%2s</string>
    <string name="log_msg_send_event_comment">&lt;b>%1s&lt;/b> 對活動：%2s 發表了留言</string>
    <string name="log_msg_event_attending">&lt;b>%1s&lt;/b> 參與了活動：%2s</string>
    <string name="log_msg_event_volunteering">&lt;b>%1s&lt;/b> 成為了活動：%2s 志工</string>
    <string name="log_msg_event_status_ongoing">&lt;b>活動：%s&lt;/b> 已經開始囉！</string>
    <string name="log_msg_event_status_ended">&lt;b>活動：%s&lt;/b> 已經結束了！</string>
    <string name="log_msg_start_following_you">&lt;b>%1s&lt;/b> 已開始追蹤你！</string>
    <string name="log_msg_event_check_in">&lt;b>%1s&lt;/b> 已於活動：%2s 完成志工簽到！</string>
    <string name="log_msg_receive_gift">&lt;b>%1s&lt;/b> 已成功將贈品：%2s 送出給您，恭喜您！</string>
    <string name="log_msg_force_end_event">&lt;b>%1s&lt;/b> 強制關閉了活動：%2s</string>


    //error handle
    <string name="error_title_isEmpty">請填寫標題</string>
    <string name="error_sort_isEmpty">請選擇分類</string>
    <string name="error_volunteer_need">請填寫志工數量</string>
    <string name="error_description_isEmpty">請填寫詳情描述</string>
    <string name="error_date_pick_isEmpty">請選擇開始與結束時間</string>
    <string name="error_condition_isEmpty">請選擇物品狀態</string>
    <string name="error_image_isEmpty">請上傳一張照片</string>
    <string name="error_event_location_isEmpty">請選擇活動地點</string>
    <string name="error_gift_location_isEmpty">請選擇取物地點</string>
    <string name="error_check_in_with_wrong_id">條碼與該活動不相符，請重新確認</string>
    <string name="error_re_chceck_int">重新掃描</string>

    //posting preview string
    <string name="preview_detail_title">刊登預覽</string>
    <string name="preview_location_title">地點</string>
    <string name="preview_choose_one_location_hint">請搜尋指定一個刊登地點</string>
    <string name="preview_gift_title_title">贈品名稱</string>
    <string name="preview_gift_sort_title">贈品分類</string>
    <string name="preview_gift_condition_title">贈品狀況</string>
    <string name="preview_gift_description_title">贈品詳情</string>
    <string name="preview_photo_title">相片預覽</string>
    <string name="preview_event_title_title">活動名稱</string>
    <string name="preview_event_sort_title">活動分類</string>
    <string name="preview_event_time_title">活動時間</string>
    <string name="preview_event_time">%1s - %2s</string>
    <string name="preview_event_volunteer_title">志工需求</string>
    <string name="preview_event_description_title">活動詳情</string>
    <string name="preview_next_step">下一步</string>
    <string name="preview_submit_btn_title">確認提交</string>
    <string name="title_posted_time">刊登時間</string>


    <string name="room_list_event_title">群聊：%1s</string>
    <string name="leave_ask_for_gift_comment">索取留言</string>
    <string name="pls_leave_askforgift_comment">請留言索取理由或感謝文。</string>


    <string name="notification_request_gift">索取</string>
    <string name="notification_attend_volunteer">志工</string>
    <string name="profile_following_string">追蹤中</string>
    <string name="profile_follower_string">粉絲數</string>
    <string name="profile_gift_sent_count_string">贈品送出</string>
    <string name="profile_gift_post_count_string">贈品刊登</string>
    <string name="profile_event_post_count_string">活動刊登</string>
    <string name="profile_event_attend_count_string">活動參與</string>
    <string name="profile_event_volunteer_count_string">志工參與</string>


    <string name="profile_defult_zero_count">-</string>


    <string name="countdown_time1">倒數 %02d 天 %02d 時 %02d 分 %02d 秒</string>
    <string name="countdown_time2">倒數 %02d 時 %02d 分 %02d 秒</string>
    <string name="countdown_time3">倒數 %02d 分 %02d 秒</string>
    <string name="countdown_time4">倒數 %02d 秒</string>

    <string name="leave_this_chatroom_message">聊天室將會被刪除，確定要繼續嗎？</string>
    <string name="user_had_left_chatroom">用戶已離開聊天室</string>
    <string name="unknown_chatroom">不明</string>

    <string name="gift_status_opening">開放中</string>
    <string name="gift_status_closed">已結案</string>
    <string name="gift_status_abandoned">已下架</string>

    <string name="event_status_waiting">等待中</string>
    <string name="event_status_opening">進行中</string>
    <string name="event_status_ended">已結束</string>
    <string name="status_all">全部</string>

    <string name="hero_contribution">%1$d 點貢獻</string>
    <string name="message_whoRead_count">已讀%1$d</string>

    //require permissions
    <string name="confirm_yes">確認</string>
    <string name="confirm_no">取消</string>
    <string name="alert_require_camera_permission">請開啟相機權限</string>
    <string name="alert_require_camera_permission_msg">此應用程式，相機權限已被關閉，需開啟才能正常使用掃描功能</string>
    <string name="alert_require_location_permission">請開啟位置權限</string>
    <string name="alert_require_location_permission_msg">此應用程式，位置權限已被關閉，需開啟才能正常使用</string>


    //intent
    <string name="select_image">請選擇一張照片</string>
    <string name="scanner_has_been_closed">掃描已關閉</string>


    //toast message
    <string name="toast_require_login">請先登入</string>
    <string name="toast_login_process">登入中，請稍候</string>
    <string name="toast_login_success">登入成功</string>
    <string name="toast_leave_report_reason">請填寫檢舉原因</string>
    <string name="toast_choose_report_flag">請選擇不當內容分類</string>
    <string name="toast_must_check_agree">請先勾選同意使用條款</string>
    <string name="toast_report_send_complete">已收到您的檢舉，我們會盡快為您審查處理！</string>
    <string name="toast_cant_find_this_place">查無此地</string>
    <string name="toast_check_in_successfully">簽到成功</string>
    <string name="toast_check_in_reject">活動尚未開始！不能簽到</string>
    <string name="toast_has_leave_room">已離開</string>
    <string name="toast_gift_has_been_sent_out">送出成功</string>


</resources>