<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/height_toolbar"
    android:layout_marginBottom="@dimen/height_bottom_app_bar"
    android:orientation="vertical"
    tools:context=".notification.NotificationFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/filter_tabs"
        android:layout_width="match_parent"
        app:tabTextColor="@color/black"
        app:tabRippleColor="@color/app_work_orange1"
        app:tabSelectedTextColor="@color/app_work_orange1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabIndicatorColor="@color/app_work_orange1"
        android:layout_height="@dimen/height_bottom_app_bar" >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_status_opening"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_status_closed"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_status_abandoned"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_all"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/home_background_grey"
        app:layout_constraintTop_toBottomOf="@id/filter_tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />


    <LinearLayout
        android:id="@+id/hint_no_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_tabs">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_main"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center|center_vertical"
            app:lottie_autoPlay="true"
            app:lottie_fileName="empty_on_search.json"
            app:lottie_speed="1"
            app:lottie_loop="true"
            android:layout_centerInParent="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="該頁面暫無資料\u0295\u2022\u0361\uFECC\u2022\u0294\u0E05"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>