<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_leave_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_report_user"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_flag_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="不當內容分類"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="@id/title_leave_reason"
        app:layout_constraintTop_toBottomOf="@id/title_leave_reason">

        <AutoCompleteTextView
            android:id="@+id/dropdown_menu_sort"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:focusable="false"
            android:gravity="center|start"
            android:inputType="none"
            android:textAppearance="@style/customHintLabel" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_leave_reason"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/toast_leave_report_reason"
        app:boxStrokeColor="@color/app_work_orange1"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        app:errorEnabled="true"
        app:hintTextColor="@color/app_work_orange1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/title_leave_reason"
        app:layout_constraintTop_toBottomOf="@id/layout_flag_menu">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_leave_reason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="googlegooglgoogleggooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegoogleooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegoogleegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegooglegoogle" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_white_ripple"
        android:text="@string/confirm_no"
        android:textColor="@color/app_work_orange1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_submit"
        app:layout_constraintStart_toStartOf="@id/title_leave_reason"
        app:layout_constraintTop_toBottomOf="@id/layout_leave_reason" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/sl_profile_follow_button"
        android:text="@string/preview_submit_btn_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layout_leave_reason"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/layout_leave_reason" />

</androidx.constraintlayout.widget.ConstraintLayout>